Reflection Plane in Eevee Rendered preview crash Blender #56800

Closed
opened 2018-09-14 14:47:23 +02:00 by YAFU · 5 comments

System Information
Kubuntu 18.04 - GTX 960

Blender Version
Broken: ee7236859d

Short description of error
Reflection Plane in Eevee Render preview crash Blender with segmentation fault

# Blender 2.80 (sub 21), Commit date: 2018-09-13 16:35, Hash ee7236859df
bpy.ops.object.lightprobe_add(type='PLANAR', radius=1, view_align=False, enter_editmode=False, location=(0, 0, 0))  # Operator

# backtrace
./blender(BLI_system_backtrace+0x1d) [0x1b5233d]
./blender() [0x1137bd9]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f96aa98af20]
./blender(EEVEE_draw_default_passes+0x18) [0x174e868]
./blender(EEVEE_lightprobes_refresh_planar+0x3e9) [0x1746c09]
./blender() [0x1740d50]
./blender(DRW_draw_render_loop_ex+0x2e2) [0x172a382]
./blender(view3d_main_region_draw+0x77) [0x1218477]
./blender(ED_region_do_draw+0x811) [0x1432531]
./blender(wm_draw_update+0x421) [0x113a301]
./blender(WM_main+0x30) [0x1138590]
./blender(main+0x327) [0x109e9d7]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f96aa96db97]
./blender(_start+0x2a) [0x11347ba]

Exact steps for others to reproduce the error
Add Reflection Plane and turn to Eevee Rendered preview.

**System Information** Kubuntu 18.04 - GTX 960 **Blender Version** Broken: ee7236859df **Short description of error** Reflection Plane in Eevee Render preview crash Blender with segmentation fault ``` # Blender 2.80 (sub 21), Commit date: 2018-09-13 16:35, Hash ee7236859df bpy.ops.object.lightprobe_add(type='PLANAR', radius=1, view_align=False, enter_editmode=False, location=(0, 0, 0)) # Operator # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1b5233d] ./blender() [0x1137bd9] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f96aa98af20] ./blender(EEVEE_draw_default_passes+0x18) [0x174e868] ./blender(EEVEE_lightprobes_refresh_planar+0x3e9) [0x1746c09] ./blender() [0x1740d50] ./blender(DRW_draw_render_loop_ex+0x2e2) [0x172a382] ./blender(view3d_main_region_draw+0x77) [0x1218477] ./blender(ED_region_do_draw+0x811) [0x1432531] ./blender(wm_draw_update+0x421) [0x113a301] ./blender(WM_main+0x30) [0x1138590] ./blender(main+0x327) [0x109e9d7] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f96aa96db97] ./blender(_start+0x2a) [0x11347ba] ``` **Exact steps for others to reproduce the error** Add Reflection Plane and turn to Eevee Rendered preview.
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

Added subscriber: @mont29

Added subscriber: @mont29
Clément Foucault was assigned by Bastien Montagne 2018-09-17 10:38:36 +02:00

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

This issue was referenced by 68f139db0d

This issue was referenced by 68f139db0d294bdd9109abc8eb9e2c9749560dce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56800
No description provided.