Fix T56800: Reflection Plane in Eevee crashes Blender