source/blender/draw/engines/eevee/eevee_effects.c
@@ -437,7 +437,7 @@ void EEVEE_create_minmax_buffer(EEVEE_Data *vedata, GPUTexture *depth_src, int l
 	GPU_framebuffer_recursive_downsample(fbl->downsample_fb, stl->g_data->minzbuffer, 8, &min_downsample_cb, vedata);
 	DRW_stats_group_end();
 #endif
-	int minmax_size[2], depth_size[2];
+	int minmax_size[3], depth_size[3];
 	GPU_texture_get_mipmap_size(depth_src, 0, depth_size);
 	GPU_texture_get_mipmap_size(txl->maxzbuffer, 0, minmax_size);
 	bool is_full_res_minmaxz = (minmax_size[0] == depth_size[0] && minmax_size[1] == depth_size[1]);
